--- a/portfolio.html
+++ b/portfolio.html
@@ -20,13 +20,13 @@
                 <a href="/" class="mainlogo"> <span class="logo">Web</span>Studio </a>
     
                 <ul class="site-nav list">
-                    <li class="item">
+                    <li class="item item-nav">
                         <a href="./index.html" class="link">Студия</a>
                     </li>
-                    <li class="item">
-                        <a href="./portfolio.html" class="link current">Портфолио</a>
+                    <li class="item item-nav">
+                        <a href="./portfolio.html" class="link  current">Портфолио</a>
                     </li>
-                    <li class="item">
+                    <li class="item item-nav">
                         <a href="#" class="link">Контакты</a>
                     </li>
                 </ul>
@@ -66,8 +66,12 @@
                     <ul class="features list">
                         <li class="project">
                             <a href="#" class="link-project">
-                                <img src="./images/tehnoproject.jpg" alt="img" width="370" class="image"">
-                                <div class="project-box">
+                                <div class="thumb">
+                                    <img src="./images/tehnoproject.jpg" alt="img" width="370" class="image"">
+                                    <p class="hover-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>                                    
+                                </div>
+                                <div class=" project-box">
                                     <h2 class="project-title">Технокряк</h2>
                                     <p class="project-text">Веб-сайт</p>
                                 </div>
@@ -75,7 +79,12 @@
                         </li>
                         <li class="project">
                             <a href="#" class="link-project">
-                                <img src="./images/starproject.jpg" alt="img" width="370" class="image"">
+                                <div class="thumb">
+                                    <img src="./images/starproject.jpg" alt="img" width="370" class="image"">
+                                    <p class=" hover-text">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="project-box">
                                     <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
                                     <p class="project-text">Дизайн</p>
@@ -84,7 +93,12 @@
                         </li>
                         <li class="project">
                             <a href="#" class="link-project">
-                                <img src="./images/seafoodproject.jpg" alt="img" width="370" class="image">
+                                <div class="thumb">
+                                    <img src="./images/seafoodproject.jpg" alt="img" width="370" class="image">
+                                    <p class=" hover-text">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="project-box">
                                     <h2 class="project-title">Ресторан Seafood</h2>
                                     <p class="project-text">Приложение</p>
@@ -93,7 +107,12 @@
                         </li>
                         <li class="project">
                             <a href="#" class="link-project">
+                            <div class="thumb">
                                 <img src="./images/primeproject.jpg" alt="img" width="370" class="image">
+                                <p class=" hover-text">Технокряк это современная площадка распространения
+                                коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                                 <div class="project-box">
                                     <h2 class="project-title">Проект Prime</h2>
                                     <p class="project-text">Маркетинг</p>
@@ -102,7 +121,12 @@
                         </li>
                         <li class="project">
                             <a href="#" class="link-project">
-                                <img src="./images/boxproject.jpg" alt="img" width="370" class="image"">
+                                <div class="thumb">
+                                    <img src="./images/boxproject.jpg" alt="img" width="370" class="image"">
+                                    <p class=" hover-text">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="project-box">
                                     <h2 class="project-title">Проект Boxes</h2>
                                     <p class="project-text">Приложение</p>
@@ -111,7 +135,12 @@
                         </li>
                         <li class="project">
                             <a href="#" class="link-project">
-                                <img src="./images/nobordersproject.jpg" alt="img" width="370" class="image">
+                                <div class="thumb">
+                                    <img src="./images/nobordersproject.jpg" alt="img" width="370" class="image">
+                                    <p class=" hover-text">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="project-box">
                                     <h2 class="project-title">Inspiration has no Borders</h2>
                                     <p class="project-text">Веб-сайт</p>
@@ -120,7 +149,12 @@
                         </li>
                         <li class="project">
                             <a href="#" class="link-project">
-                                <img src="./images/limitedproject.jpg" alt="img" width="370" class="image">
+                                <div class="thumb">
+                                    <img src="./images/limitedproject.jpg" alt="img" width="370" class="image">
+                                    <p class=" hover-text">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="project-box">
                                     <h2 class="project-title">Издание Limited Edition</h2>
                                     <p class="project-text">Дизайн</p>
@@ -129,7 +163,12 @@
                         </li>
                         <li class="project">
                             <a href="#" class="link-project">
-                                <img src="./images/labproject.jpg" alt="img" width="370" class="image">
+                                <div class="thumb">
+                                    <img src="./images/labproject.jpg" alt="img" width="370" class="image">
+                                    <p class=" hover-text">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="project-box">
                                     <h2 class="project-title">Проект LAB</h2>
                                     <p class="project-text">Маркетинг</p>
@@ -138,7 +177,12 @@
                         </li>
                         <li class="project">
                             <a href="#" class="link-project">
-                                <img src="./images/businessproject.jpg" alt="img" width="370" class="image">
+                                <div class="thumb">
+                                    <img src="./images/businessproject.jpg" alt="img" width="370" class="image">
+                                    <p class=" hover-text">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="project-box">
                                     <h2 class="project-title">Growing Business</h2>
                                     <p class="project-text">Приложение</p>
@@ -152,7 +196,7 @@
         </main>
         
     <footer class="footer">
-        <div class="container footer">
+        <div class="container footeroll">
             <div class="footer-container adress">
                 <a href="/" class="mainlogo"> <span class="logo">Web</span>Studio </a>
                 <address class="adress">
@@ -168,7 +212,7 @@
                 </address>
             </div>
             <div class="footer-container social">
-                <h3 class="social-title">присоединяйтесь</h3>
+                <p class="social-title">присоединяйтесь</p>
                 <ul class="list social">
                     <li class="social-item socialmain">
                         <a href="#" class="social-link socialmain">
