--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <a href="/" class="mainlogo"> <span class="logo">Web</span>Studio </a>
 
                 <ul class="site-nav list">               
-                    <li class="item">
+                    <li class="item item-nav">
                         <a href="./index.html" class="link current">Студия</a>
                     </li>
-                    <li class="item">
+                    <li class="item item-nav">
                         <a href="./portfolio.html" class="link">Портфолио</a>
                     </li>
-                    <li class="item">
+                    <li class="item item-nav">
                         <a href="#" class="link">Контакты</a>
                     </li>
                 </ul>
@@ -54,7 +54,7 @@
     <main>
          <section class="hero">
             <h1 class="hero-title">Эффективные решения <br/>для вашего бизнеса</h1>
-            <a href="#" class="hero-link">Заказать услугу</a>
+            <button type="button" class="hero-link" data-modal-open>Заказать услугу</button>
         </section>
        
         <section class="section features">
@@ -113,12 +113,16 @@
                 <ul class="features list">
                     <li class="item-img">
                         <img src="./images/box1.jpg" alt="photo" width="370" class="photo">
+                        <p class="photo-text">Десктопные приложения</p>
                     </li>
                     <li class="item-img">
                         <img src="./images/box2.jpg" alt="photo" width="370" class="photo">
+                        <p class="photo-text">Мобильные приложения</p>
+
                     </li>
                     <li class="item-img">
                         <img src="./images/box3.jpg" alt="photo" width="370" class="photo">
+                        <p class="photo-text">Дизайнерские решения</p>
                     </li>
                 </ul>
             </div>
@@ -384,5 +388,16 @@
                 </div>
             </div>  
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-button" data-modal-close>
+                <svg width="30" height="30">
+                    <use href="./images/symbol-defs.svg#icon-close"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
